--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-3==0.0.0
+Django==3.0.2
+django-crispy-forms==1.9.0
+gunicorn==20.0.4
+djangorestframework==3.11.0
+
 asgiref==3.2.3
 astroid==2.3.3
 certifi==2019.11.28
@@ -7,12 +11,13 @@ chardet==3.0.4
 colorama==0.4.3
 cryptography==2.8
 defusedxml==0.6.0
-Django==3.0.2
+
 django-bootstrap==0.2.4
 django-cors-middleware==1.5.0
-django-crispy-forms==1.9.0
+
 django-oauth-toolkit==1.3.0
-djangorestframework==3.11.0
+
+
 httplib2==0.17.0
 idna==2.9
 isort==4.3.21
