--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-Django==2.2
+asgiref==3.2.10
+Django==3.0
 django-crispy-forms==1.9.2
 django-filter==2.3.0
-django-material==0.5.1
+django-material==1.7.0
 python-dateutil==2.8.1
 pytz==2020.1
 six==1.15.0
 sqlparse==0.3.1
+uuid==1.30
 xlwt==1.3.0
